# spw_data_rec

./: .gitignore  CMakeLists.txt  README.md
inc/: LA_interface.h  arg_parser.h  common.h  config_logger.h  dataLogging.h  data_logger.h  general.h  packet_archiver.h  recordTraffic.h  spw_la_api.h  star-api.h  star-dundee_64_bit_types.h  star-dundee_annotations.h  star-dundee_types.h  star_device_handle.h  star_utils.h  stream_item.h  stream_item_types.h  transfer.h  transfer_types.h  types.h  version.h
lib/: spw_la_api.lib  star-api.lib
recordTraffic/: main.c  recordTraffic.c  recordTraffic.h
src/: LA_interface.c  arg_parser.c  config_logger.c  dataLogging.c  data_logger.c  main.c  packet_archiver.c  plato.lua  recordTraffic.c  star_utils.c
